--- a/.env
+++ b/.env
@@ -1,11 +1,2 @@
-# VITE_API_BASE_URL=http://localhost:5000
-# VITE_ADMIN_PANEL_NAME=MyAdminPanel
-
-
-# VITE_API_BASE_URL=https://backend-mlm.onrender.com/api
-# VITE_ADMIN_PANEL_NAME=MyAdminPanel
-
-VITE_API_BASE_URL=https://backend-mlm.onrender.com
+VITE_API_BASE_URL=https://api.knowo.world
 VITE_ADMIN_PANEL_NAME=MyAdminPanel
-
-
