--- a/.env.production
+++ b/.env.production
@@ -1,10 +1,5 @@
-<<<<<<< HEAD
-# VITE_API_BASE_URL=http://localhost:5000
-# VITE_ADMIN_PANEL_NAME=MyAdminPanel
-
-VITE_API_BASE_URL=https://api.knowo.world
-VITE_ADMIN_PANEL_NAME=MyAdminPanel 
-=======
-VITE_API_BASE_URL=https://api.knowo.world
+VITE_API_BASE_URL=http://localhost:5000
 VITE_ADMIN_PANEL_NAME=MyAdminPanel
->>>>>>> 497e1420eeea39e03ce4a5835b42f6b1e94c866c
+
+# VITE_API_BASE_URL=https://api.knowo.world
+# VITE_ADMIN_PANEL_NAME=MyAdminPanel 
