--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,10 @@
 Options -MultiViews
 RewriteEngine On
 
-# ✅ Serve open-app.html directly
-RewriteRule ^open-app$ open-app.html [L]
+# If the request is specifically for /open-app, serve open-app.html
+RewriteRule ^open-app$ /open-app.html [L]
 
-# ✅ Let existing files and folders load normally
+# If not an existing file or folder, route to index.html (React SPA fallback)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-
-# ✅ All other routes go to React
 RewriteRule ^ index.html [QSA,L]
