--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_API_BASE_URL=http://localhost:5000
-VITE_ADMIN_PANEL_NAME=MyAdminPanel
+# VITE_API_BASE_URL=http://localhost:5000
+# VITE_ADMIN_PANEL_NAME=MyAdminPanel
 
-# VITE_API_BASE_URL=https://api.knowo.world
-# VITE_ADMIN_PANEL_NAME=MyAdminPanel 
+VITE_API_BASE_URL=https://api.knowo.world
+VITE_ADMIN_PANEL_NAME=MyAdminPanel 
